Prevent word break on tag

--- a/_sass/components/tag.scss
+++ b/_sass/components/tag.scss
@@ -9,6 +9,7 @@
   display: inline;
   font-weight: normal;
   color: $primary-color;
+  word-break: keep-all;
 }
 
 .hashtag::before {
